# konfig

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: konfignode.rs  konfigset.rs  lib.rs
crds/: crds.yaml
examples/: 01-hello.yaml  02-server.yaml  basic-example.yaml
konfigd/: Cargo.toml
konfigd/src/: errors.rs  konfignode.rs  main.rs
konfigm/: Cargo.toml
konfigm/src/: main.rs  manager.rs
