[package]
name = "konfig-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# local
configc = { path = "../configc" }

tokio = { workspace = true }
kube = { workspace = true }
kube-derive = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
